// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppHeader /> CanHandleFallbackNavMenus story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="app-header__nav-groups"
      >
        <nav
          aria-label="group-2"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r3e:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Show Profile
                    </span>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="app-header__menu"
      >
        <button
          aria-label="Show Menu"
          class="app-header__nav-item app-header__nav-item--button"
        >
          <span
            class="app-header__nav-item--button app-header__nav-item--icon-layout-icon-only"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 17.269C4.35833 17.269 4.23958 17.221 4.14375 17.125C4.04792 17.029 4 16.9101 4 16.7682C4 16.6264 4.04792 16.5077 4.14375 16.4122C4.23958 16.3167 4.35833 16.269 4.5 16.269H19.5C19.6417 16.269 19.7604 16.317 19.8563 16.413C19.9521 16.5088 20 16.6277 20 16.7697C20 16.9116 19.9521 17.0302 19.8563 17.1257C19.7604 17.2212 19.6417 17.269 19.5 17.269H4.5ZM4.5 12.4997C4.35833 12.4997 4.23958 12.4517 4.14375 12.3557C4.04792 12.2597 4 12.1408 4 11.999C4 11.8571 4.04792 11.7385 4.14375 11.643C4.23958 11.5475 4.35833 11.4997 4.5 11.4997H19.5C19.6417 11.4997 19.7604 11.5477 19.8563 11.6437C19.9521 11.7397 20 11.8586 20 12.0005C20 12.1423 19.9521 12.261 19.8563 12.3565C19.7604 12.452 19.6417 12.4997 19.5 12.4997H4.5ZM4.5 7.73047C4.35833 7.73047 4.23958 7.68247 4.14375 7.58647C4.04792 7.49064 4 7.37172 4 7.22972C4 7.08789 4.04792 6.96922 4.14375 6.87372C4.23958 6.77822 4.35833 6.73047 4.5 6.73047H19.5C19.6417 6.73047 19.7604 6.77847 19.8563 6.87447C19.9521 6.97047 20 7.08939 20 7.23122C20 7.37305 19.9521 7.49172 19.8563 7.58722C19.7604 7.68272 19.6417 7.73047 19.5 7.73047H4.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> Default story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="app-header__nav-groups"
      >
        <nav
          aria-label="lakes"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Lakes
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r8:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Oceans
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:re:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Rivers
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
              </a>
            </li>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
              </a>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:rk:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="app-header__menu"
      >
        <button
          aria-label="Show Menu"
          class="app-header__nav-item app-header__nav-item--button"
        >
          <span
            class="app-header__nav-item--button app-header__nav-item--icon-layout-icon-only"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 17.269C4.35833 17.269 4.23958 17.221 4.14375 17.125C4.04792 17.029 4 16.9101 4 16.7682C4 16.6264 4.04792 16.5077 4.14375 16.4122C4.23958 16.3167 4.35833 16.269 4.5 16.269H19.5C19.6417 16.269 19.7604 16.317 19.8563 16.413C19.9521 16.5088 20 16.6277 20 16.7697C20 16.9116 19.9521 17.0302 19.8563 17.1257C19.7604 17.2212 19.6417 17.269 19.5 17.269H4.5ZM4.5 12.4997C4.35833 12.4997 4.23958 12.4517 4.14375 12.3557C4.04792 12.2597 4 12.1408 4 11.999C4 11.8571 4.04792 11.7385 4.14375 11.643C4.23958 11.5475 4.35833 11.4997 4.5 11.4997H19.5C19.6417 11.4997 19.7604 11.5477 19.8563 11.6437C19.9521 11.7397 20 11.8586 20 12.0005C20 12.1423 19.9521 12.261 19.8563 12.3565C19.7604 12.452 19.6417 12.4997 19.5 12.4997H4.5ZM4.5 7.73047C4.35833 7.73047 4.23958 7.68247 4.14375 7.58647C4.04792 7.49064 4 7.37172 4 7.22972C4 7.08789 4.04792 6.96922 4.14375 6.87372C4.23958 6.77822 4.35833 6.73047 4.5 6.73047H19.5C19.6417 6.73047 19.7604 6.77847 19.8563 6.87447C19.9521 6.97047 20 7.08939 20 7.23122C20 7.37305 19.9521 7.49172 19.8563 7.58722C19.7604 7.68272 19.6417 7.73047 19.5 7.73047H4.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> DefaultWithImageLogo story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <a
          aria-label="homepage"
          class="app-header__home-link"
          href="https://example.org"
        >
          <div
            class="app-header-title__title app-header-title--has-logo"
          >
            <div
              class="fpo h-[40px] w-[175px]"
            >
              Logo goes here
            </div>
          </div>
        </a>
      </div>
      <div
        class="app-header__nav-groups"
      >
        <nav
          aria-label="lakes"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r10:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Lakes
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r16:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Oceans
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r1c:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Rivers
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
              </a>
            </li>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
              </a>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r1i:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="app-header__menu"
      >
        <button
          aria-label="Show Menu"
          class="app-header__nav-item app-header__nav-item--button"
        >
          <span
            class="app-header__nav-item--button app-header__nav-item--icon-layout-icon-only"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 17.269C4.35833 17.269 4.23958 17.221 4.14375 17.125C4.04792 17.029 4 16.9101 4 16.7682C4 16.6264 4.04792 16.5077 4.14375 16.4122C4.23958 16.3167 4.35833 16.269 4.5 16.269H19.5C19.6417 16.269 19.7604 16.317 19.8563 16.413C19.9521 16.5088 20 16.6277 20 16.7697C20 16.9116 19.9521 17.0302 19.8563 17.1257C19.7604 17.2212 19.6417 17.269 19.5 17.269H4.5ZM4.5 12.4997C4.35833 12.4997 4.23958 12.4517 4.14375 12.3557C4.04792 12.2597 4 12.1408 4 11.999C4 11.8571 4.04792 11.7385 4.14375 11.643C4.23958 11.5475 4.35833 11.4997 4.5 11.4997H19.5C19.6417 11.4997 19.7604 11.5477 19.8563 11.6437C19.9521 11.7397 20 11.8586 20 12.0005C20 12.1423 19.9521 12.261 19.8563 12.3565C19.7604 12.452 19.6417 12.4997 19.5 12.4997H4.5ZM4.5 7.73047C4.35833 7.73047 4.23958 7.68247 4.14375 7.58647C4.04792 7.49064 4 7.37172 4 7.22972C4 7.08789 4.04792 6.96922 4.14375 6.87372C4.23958 6.77822 4.35833 6.73047 4.5 6.73047H19.5C19.6417 6.73047 19.7604 6.77847 19.8563 6.87447C19.9521 6.97047 20 7.08939 20 7.23122C20 7.37305 19.9521 7.49172 19.8563 7.58722C19.7604 7.68272 19.6417 7.73047 19.5 7.73047H4.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> FloatingVerticalOrientation story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-vertical app-header--style-floating"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="drawer-content"
      >
        <nav
          aria-label="lakes"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Lakes
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-current"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Superior
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Tahoe
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Crater Lake
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Oceans
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Pacific Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Atlantic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Arctic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Rivers
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Nile River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Amazon River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Danube River
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-separator"
            >
              <hr
                class="hr app-header__nav-item--separator"
                name="line-0"
                type="separator"
              />
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-menu"
            >
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__menu-trigger app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r32:"
                >
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                    />
                  </svg>
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> MobileFloatingVerticalEmpty story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-vertical app-header--style-floating"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="drawer-content"
      />
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> StyleFloating story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal app-header--style-floating"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="app-header__nav-groups"
      >
        <nav
          aria-label="lakes"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r1u:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Lakes
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r24:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Oceans
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2a:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Rivers
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
              </a>
            </li>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
              </a>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2g:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="app-header__menu"
      >
        <button
          aria-label="Show Menu"
          class="app-header__nav-item app-header__nav-item--button"
        >
          <span
            class="app-header__nav-item--button app-header__nav-item--icon-layout-icon-only"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 17.269C4.35833 17.269 4.23958 17.221 4.14375 17.125C4.04792 17.029 4 16.9101 4 16.7682C4 16.6264 4.04792 16.5077 4.14375 16.4122C4.23958 16.3167 4.35833 16.269 4.5 16.269H19.5C19.6417 16.269 19.7604 16.317 19.8563 16.413C19.9521 16.5088 20 16.6277 20 16.7697C20 16.9116 19.9521 17.0302 19.8563 17.1257C19.7604 17.2212 19.6417 17.269 19.5 17.269H4.5ZM4.5 12.4997C4.35833 12.4997 4.23958 12.4517 4.14375 12.3557C4.04792 12.2597 4 12.1408 4 11.999C4 11.8571 4.04792 11.7385 4.14375 11.643C4.23958 11.5475 4.35833 11.4997 4.5 11.4997H19.5C19.6417 11.4997 19.7604 11.5477 19.8563 11.6437C19.9521 11.7397 20 11.8586 20 12.0005C20 12.1423 19.9521 12.261 19.8563 12.3565C19.7604 12.452 19.6417 12.4997 19.5 12.4997H4.5ZM4.5 7.73047C4.35833 7.73047 4.23958 7.68247 4.14375 7.58647C4.04792 7.49064 4 7.37172 4 7.22972C4 7.08789 4.04792 6.96922 4.14375 6.87372C4.23958 6.77822 4.35833 6.73047 4.5 6.73047H19.5C19.6417 6.73047 19.7604 6.77847 19.8563 6.87447C19.9521 6.97047 20 7.08939 20 7.23122C20 7.37305 19.9521 7.49172 19.8563 7.58722C19.7604 7.68272 19.6417 7.73047 19.5 7.73047H4.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> VerticalDefaultWithImageLogo story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-vertical app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <a
          aria-label="homepage"
          class="app-header__home-link"
          href="https://example.org"
        >
          <div
            class="app-header-title__title app-header-title--has-logo"
          >
            <div
              class="fpo h-[40px] w-[175px]"
            >
              Logo goes here
            </div>
          </div>
        </a>
      </div>
      <div
        class="drawer-content"
      >
        <nav
          aria-label="lakes"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Lakes
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-current"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Superior
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Tahoe
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Crater Lake
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Oceans
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Pacific Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Atlantic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Arctic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Rivers
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Nile River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Amazon River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Danube River
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-separator"
            >
              <hr
                class="hr app-header__nav-item--separator"
                name="line-0"
                type="separator"
              />
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-menu"
            >
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__menu-trigger app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r38:"
                >
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                    />
                  </svg>
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> VerticalOrientation story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-vertical app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="drawer-content"
      >
        <nav
          aria-label="lakes"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Lakes
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-current"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Superior
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Tahoe
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Crater Lake
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Oceans
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Pacific Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Atlantic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Arctic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Rivers
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Nile River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Amazon River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Danube River
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-separator"
            >
              <hr
                class="hr app-header__nav-item--separator"
                name="line-0"
                type="separator"
              />
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-menu"
            >
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__menu-trigger app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2s:"
                >
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 14.379C11.8923 14.379 11.7929 14.3614 11.7019 14.3262C11.6109 14.2909 11.5218 14.2296 11.4344 14.1425L7.04619 9.75397C6.95252 9.66047 6.90252 9.54572 6.89619 9.40972C6.88969 9.27388 6.93969 9.1528 7.04619 9.04647C7.15252 8.93997 7.27044 8.88672 7.39994 8.88672C7.52944 8.88672 7.64736 8.93997 7.75369 9.04647L11.9999 13.2925L16.2462 9.04647C16.3397 8.9528 16.4544 8.9028 16.5904 8.89647C16.7263 8.88997 16.8474 8.93997 16.9537 9.04647C17.0602 9.1528 17.1134 9.27072 17.1134 9.40022C17.1134 9.52972 17.0602 9.64764 16.9537 9.75397L12.5654 14.1425C12.4781 14.2296 12.3889 14.2909 12.2979 14.3262C12.2069 14.3614 12.1076 14.379 11.9999 14.379Z"
                    />
                  </svg>
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;
